chrome/test/data/nacl/bad/ppapi_bad_manifest_bad_files.nmf
{
  "program": {
    "x86-32": {"url": "ppapi_bad_no_ppp_instance_x86-32.nexe"},
    "x86-64": {"url": "ppapi_bad_no_ppp_instance_x86-64.nexe"},
    "arm": {"url": "ppapi_bad_no_ppp_instance_arm.nexe"},
    "mips32": {"url": "ppapi_bad_no_ppp_instance_mips32.nexe"}
  },
  "files": {
    "file.txt": {
      "unknown_arch": {}
    }
  }
}
